--- a/src/main/resources/ValidationMessages_ja.properties
+++ b/src/main/resources/ValidationMessages_ja.properties
@@ -25,3 +25,4 @@ jp.mydns.projectk.safi.validator.TimeRange.message = \u6642\u523b\u304c\u8a31\u5
 jp.mydns.projectk.safi.validator.TimeAccuracy.message = \u79d2\u672a\u6e80\u306f\u8a31\u53ef\u3055\u308c\u307e\u305b\u3093
 jp.mydns.projectk.safi.validator.PositiveOrZeroDuration.message = 0\u4ee5\u4e0a\u3067\u3042\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059
 jp.mydns.projectk.safi.validator.DurationRange.message = \u6642\u9593\u9593\u9694\u304c\u8a31\u5bb9\u7bc4\u56f2\u5916\u3067\u3059
+jp.mydns.projectk.safi.validator.ExistsJobdef.message = \u30b8\u30e7\u30d6\u5b9a\u7fa9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093
